<resources>
    <string name="app_name">LostAndFound</string>
    <string name="show_lost_found_items"><![CDATA[Show lost & found items]]></string>
    <string name="create_a_new_advert">Create a new advert</string>
    <string name="post_type">Post Type:</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="save">Save</string>
    <string name="lost_amp_found_items"><![CDATA[LOST & FOUND ITEMS]]></string>
</resources>