<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.lostandfound.presentation.createAdvert.CreateAdvertViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.createAdvert.CreateAdvertActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="40sp"
            android:layout_marginVertical="40sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:text="@string/post_type"
                    android:textSize="18sp"
                    android:layout_marginEnd="25sp"
                    android:textStyle="bold"
                    android:paddingTop="13sp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/lostRadio"
                        android:layout_width="100sp"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="@string/lost"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/foundRadio"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/found"
                        android:checked="false"/>
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="18sp"
                android:background="@drawable/text_input_background"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:autofillHints="name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="18sp"
                android:background="@drawable/text_input_background"
                android:hint="@string/phone"
                android:textColorHint="@color/white"
                android:inputType="phone"
                android:autofillHints="phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:textSize="18sp"
                android:background="@drawable/text_input_background"
                android:hint="@string/description"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:autofillHints="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="18sp"
                android:background="@drawable/text_input_background"
                android:hint="@string/date"
                android:textColorHint="@color/white"
                android:autofillHints="text"
                android:inputType="date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="18sp"
                android:background="@drawable/text_input_background"
                android:hint="@string/location"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:autofillHints="text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40sp">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="270sp"
                    android:layout_height="50sp"
                    android:background="@drawable/button_background"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>